# selectable-library

./: CONTRIBUTING.md  LICENSE  README.md  TODO.md  package.json  react-native-selectable-text.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle
android/src/main/java/com/selectableapp/selectabletext/: SelectableRichTextLongPressEvent.kt  SelectableRichTextMenuActionEvent.kt  SelectableRichTextPackage.kt  SelectableRichTextView.kt  SelectableRichTextViewManager.kt  SelectableTextView.kt  SelectableTextViewManager.kt
common/cpp/: CMakeLists.txt  RNSelectableTextSpec.h
common/cpp/react/renderer/components/RNSelectableTextSpec/: ComponentDescriptors.h
common/cpp/react/renderer/components/selectablerichtext/: SelectableRichTextComponentDescriptor.h  SelectableRichTextEventEmitter.cpp  SelectableRichTextEventEmitter.h  SelectableRichTextProps.cpp  SelectableRichTextProps.h  SelectableRichTextShadowNode.cpp  SelectableRichTextShadowNode.h
example/: README.md  app.json  metro.config.js  package.json  vite.config.mjs
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/selectable/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/SelectableExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SelectableExample.xcodeproj/: project.pbxproj
example/ios/SelectableExample.xcodeproj/xcshareddata/xcschemes/: SelectableExample.xcscheme
example/ios/SelectableExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  MarkdownPage.tsx
ios/: RCTSelectableRichTextComponentView.h  RCTSelectableRichTextComponentView.mm  RCTSelectableRichTextView.h  RCTSelectableRichTextView.mm  RCTSelectableTextShadowView.mm  RCTSelectableTextView.h  RCTSelectableTextView.mm  RCTSelectableTextViewManager.mm
src/: NativeSelectableRichTextNativeComponent.ts  SelectableRichText.tsx  index.ts  react-native-internals.d.ts  types.ts
